--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
     <section id="section">
-        <button id="btn">Background Color Change</button>
+        <button id="btn">Click Here</button>
         <h2 id="code"></h2>
     </section>
     <script>
